/* What XMMS2 will not do */
Levitation import of page 2187 rev 7979.

--- a/0-/What XMMS2 isn't.mediawiki
+++ b/0-/What XMMS2 isn't.mediawiki
@@ -35,4 +35,5 @@ XMMS2 is, quite simply, [[About|a music player]]. It does have a number of [[fea
 * give you [[Wikipedia:Superhuman_Strength|superhuman strength]].
 ** ... unless you compile it with -fuse-[[Wikipedia:Kryptonite|kryptonite]].
 * [[Wikipedia:Spy | spy]] on you.
+* steal your money and spread to developers
 ** ... except when told to [[ET | call home]].
