--- a/0-/GSoC:2007/Service Clients/Details.mediawiki
+++ b/0-/GSoC:2007/Service Clients/Details.mediawiki
@@ -1,5 +1,5 @@
 ==Description==
-Service client idea empowers XMMS2 with unlimited expendibility. Different
+Service client idea empowers XMMS2 with unlimited expandability. Different
 service clients can register themselves to the server so that when normal
 clients want to tag a music file for example, the service client will know what to do. Or normal clients want to look up some data from MusicBrainz.org, service client can perform the search and return the results to the normal clients. In this way, normal clients can share additional features provided by different service clients without having to implement them in every normal client over and over again.
 
