/* What XMMS2 will not do */
Levitation import of page 2187 rev 7986.

--- a/0-/What XMMS2 isn't.mediawiki
+++ b/0-/What XMMS2 isn't.mediawiki
@@ -29,6 +29,8 @@ XMMS2 is, quite simply, [[About|a music player]]. It does have a number of [[fea
 ** ... unless you're [[SÃ©bastien Cevey]].
 * break you out of [[Wikipedia:Prison Break|jail]].
 ** ... except when compiled by [[Wikipedia:Frank Morris|Frank Morris]], or [[Wikipedia:John Anglin|John]] and [[Wikipedia:Clarence Anglin|Clarence Anglin]].
+* [[Wikipedia:Roundhouse_kick | roundhouse kick]] you.
+** ... except when compiled by [[Wikipedia:Chuck_Norris | Chuck Norris]].
 * cure you of [[Wikipedia:AIDS|AIDS]], [[Wikipedia:Cancer|cancer]] or [[Wikipedia:Syphillis|syphillis]].
 * give you free music.
 ** ... except for a [[Intro Clips|small sample]].
