--- a/0-/Contribs.mediawiki
+++ b/0-/Contribs.mediawiki
@@ -27,7 +27,7 @@ Good for using in hotkeys(specially if you have a multimedia keyboard ;) ) | mor
 
 {{Contrib| title=Medialib cleaner| author=Sham Chukoury| description=Simple script to remove items marked as 'unavailable' in the medialib (which can include things like JPEG and text files).| moreinfo=| files=* [http://xmms2.xmms.se/contrib/files/xmms2-clean-mlib.py xmms2-clean-mlib.py]}}
 
-{{Contrib| title=xmms2_random_album | author=ashtophet| description=Quick shell script to add a random album to a dedicated playlist. It will be obsolete when random album playback is available natively. NOTE: You have to edit source and change max_num_id (max id on mlib)!! If you use it, find annoyances, improvements, suggestions... please, contact me (mail is at source).| moreinfo=| files=* [http://www.ashtophet.org/xmms2_random_album.sh xmms2_random_album.sh]}}
+{{Contrib| title=xmms2_random_album | author=ashtophet| description=Quick shell script to add a random album to a dedicated playlist. It will be obsolete when random album playback is available natively (using collection advanced features). If you use it, find annoyances, improvements, suggestions... please, contact me (mail is at source).| moreinfo=| files=* [http://www.ashtophet.org/xmms2_random_album.sh xmms2_random_album.sh]}}
 
 {{Contrib| title=xmms2lyrics | author=ashtophet| description=Very simple shell script to fetch current xmms2 song lyrics (w3m) and show them (w3m) using google's(tm) "feeling lucky" feature. Based on  [http://www.ashtophet.org//mpdlyrics-0.0.6 mpdlyrics].| moreinfo=| files=* [http://www.ashtophet.org/xmms2lyrics.sh xmms2lyrics.sh]}}
 
