--- a/0-/Release:DrKosmos.mediawiki
+++ b/0-/Release:DrKosmos.mediawiki
@@ -4,6 +4,8 @@
 
 Upgrading should be smoooooooth.
 
+If you build from source and used the --with-python-archdir option, you have to use the environment variable 'PYTHONDIR' instead. Python interpreter can also be specified using the PYTHON environment variable.
+
 === Noteworthy changes ===
 
 Waf build system updated to version 1.2.0
