--- a/0-/Release:DrKosmos.mediawiki
+++ b/0-/Release:DrKosmos.mediawiki
@@ -34,6 +34,8 @@ win32/mingw
 * New method xmmsc_medialib_move_entry introduced.
 * New method xmmsc_coll_sync introduced.
 
+XMMS_PATH is now handled in the clientlib, passing NULL as path will use XMMS_PATH if set.
+
 === Notes to xform authors ===
 
 * The methods xmms_xform_metadata_get_int/str now get value by reference and returns a boolean indicating if the datum did exist.
